# video_reuse_detector

./: .gitignore  README.md  Tracking-and-tracing-audiovisual-reuse-Introducing-the-Video-Reuse-Detector.ipynb.REMOVED.git-id  pyproject.toml
media/demo/: The Eagle Has Landed x265.mp4.REMOVED.git-id  The Moon and Us x265.mp4.REMOVED.git-id
vrd/: faiss_helper.py  image_preprocessing.py  keras_layer_helper.py  neural_networks.py  notebook_helper.py  sequence_finder.py  vrd_project.py
