[tool.poetry]
name = "video-reuse-detector"
version = "0.1.4"
description = "The video reuse detector"
authors = ["TomasSkotare <tomas.skotare@umu.se>"]
license = "MIT"
readme = "README.md"
packages = [{include = "vrd"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
faiss-cpu = "*"
ffmpeg-python = "*"
keract = "*"
keras = "*"
numpy= "*"
opencv-python = "*"
pandas = "*"
Pillow = "*"
plotly = "*"
scipy = "*"
seaborn = "*"
tensorflow = "~2.10"
tqdm = "*"
Wand = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
